added some more tests and a Painter class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,6 @@ add_subdirectory(lib/googletest-master) #
 #include_directories(lib/googletest-master/googletest/include) #
 include_directories(lib/googletest-master/googlemock/include) #
 
-set(SOURCE_FILES main.cpp Board.cpp Board.h Cell.cpp Cell.h Player.h HumanPlayer.cpp HumanPlayer.h GameLogic.cpp GameLogic.h RegularLogic.cpp RegularLogic.h Game.cpp Game.h IOEPlayer.cpp IOEPlayer.h Tests/BoardClassTest.cpp Tests/RegularLogicTest.cpp Tests/gtest_main.cpp Tests/AIPlayerTest.cpp Tests/CellTest.cpp)
-add_executable(homeWork ${SOURCE_FILES} Tests/BoardClassTest.cpp Tests/RegularLogicTest.cpp Tests/gtest_main.cpp Tests/AIPlayerTest.cpp Tests/CellTest.cpp)
+set(SOURCE_FILES main.cpp Board.cpp Board.h Cell.cpp Cell.h Player.h HumanPlayer.cpp HumanPlayer.h GameLogic.cpp GameLogic.h RegularLogic.cpp RegularLogic.h Game.cpp Game.h IOEPlayer.cpp IOEPlayer.h Tests/BoardClassTest.cpp Tests/RegularLogicTest.cpp Tests/gtest_main.cpp Tests/AIPlayerTest.cpp Tests/CellTest.cpp Painter.h ConsolePainter.cpp ConsolePainter.h)
+add_executable(homeWork ${SOURCE_FILES} Tests/BoardClassTest.cpp Tests/RegularLogicTest.cpp Tests/gtest_main.cpp Tests/AIPlayerTest.cpp Tests/CellTest.cpp Painter.h)
 target_link_libraries(homeWork gtest gtest_main) #
